adding points after review

--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -3,13 +3,16 @@
 El ser humano se mueve por el poder de seduccion, solo si nos sentimos atraidos pondremos nuestro
 interes y esfuerzo para alcanzarlo. Esto nos muestra que en la representaciones que hagamos, tendremos que 
 preocuparnos por el efecto que transmite, el enganche que tiene para los demas, a mas atraccion, mas
-nivel de involucracion por parte del usuario.
+nivel de involucracion por parte del usuario.\\
+
+Los departamentos de marketing han estado estudiando diferentes tecnicas durantes los ultimos annos,
+por lo que podemos aplicar su conomiento para llegar a nuestros usuarios y que estos deseen continuar con nosotros.
 
 En este apartado repasaremos los distintos puntos para implementar un producto que se quede en la mente
 del usuario y este se sienta atraido irresitiblemente a utilizarla.  
 
 \input{contents/compelling/mission.tex}
-\input{contents/compelling/advantage.tex}
+%\input{contents/compelling/advantage.tex}
 \input{contents/compelling/engagement.tex}
 \input{contents/compelling/userExperience.tex}
 \input{contents/compelling/attractive.tex}
