--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -13,27 +13,19 @@ Otras caracteristicas mas tecnicas son:\\
 \textbf{Consistencia.} Los controles que realizen las mismas acciones debe mantener el mismo diseno. Las funcionalidades
 tambien deberan seguier este principio\\
 
-\textbf{Limpieza.} Un diseno ordenado transmitira una mejor sensacion y el usuario sera capaz de localizar lo que busca
+\textbf{Limpieza y orden.} Un diseno ordenado transmitira una mejor sensacion y el usuario sera capaz de localizar lo que busca
 mas facilmente\\
-
-\textbf{Simplicidad.} El objetivo es representar la informacion, huiremos de toda decoracion innecesaria que emborrene
-el objetivo principal. Recordemos que menos es mas. Un diseno complicado, con muchos colores y diferentes formas abstractas
-sera mas dificil de interpretar por el usuario\\
-
-
-\textbf{Estandares.} En el mercado existen varios estandares a los que el usuario esta acostumbrado y sabe lo que esperar.
-Por ejemplo una lupa, lo relacionamos con la accion de buscar, si utilizamos este icono, el usuario sabra rapidamente que
-funcion realiza, sin embargo, si utilizamos uno completamente nuevo, puede incluso confundir al usuario\\
-
-\textbf{Familiaridad.} Al usuario le resultara mas facil de manipular o navegar sobre la plataforma si siente que 
-le es familiar y no se siente perdido. Por ejemplo, si tenemos un icono para elegir una fecha, seria muy recomendable
-utilizar un calendario, aunque no es un estandar, estamos acostumbrados a reconocerlo\\
 
 \textbf{Detalles.} Una etiqueta con distinta tipologia u otro color, puede disturbar a la percepcion del usuario. Si no 
 buscamos resaltar algo en concreto, parecera un error \\
 
 \textbf{Sena de identidad.} Es muy recomendable utilizar algo singular que nos identifique y que el usuario sea capaz 
 de reconocernos rapidamente, esto puede ser una imagen, una combinacion de colores, un logo, etc.
+
+Para poder enganchar a nuestros usuarios, es actualmente muy utilizada la gamification, donde se le da a la forma de 
+representar los datos un aspecto de juego. El usuario comienza a utilizarlo porque le llama la atencion, es divertido,
+pero en algun momento esa atraccion inicial desaparece, aun asi, el usuario ha aprendido a utilizar los datos y 
+se siente atraido a seguir usandolos.
 
 \subsubsection{How to solve it} 
 Para poder realizar un diseno atractivo, hay que estudiar las tendencias del momento, las buenas practicas de diseno y aplicarlas.
@@ -61,36 +53,7 @@ zona inferior donde encontraremos el historial de zona y el personalizado.
     \caption{Heading}
 \end{figure}
 
-Los componentes estandares son:
-\begin{itemize}
- \item los botones, que se oscurecen cuando estan seleccionados y utilizar una tonalidad mas resultona cuando se seleccionan.
-\item Pestanas, con un comportamiento similar y un aspecto de pestana estandar
-\item Simbolo de espera, circulo rotatorio
-\item Links, textos subrayados
-\item Barra de busqueda, igual que la que encontramos en los buscadores
-\end{itemize}
 
-
-
-\begin{figure}[ht]
-    \centering
-   \subfigure[Searching bar]
-    {\includegraphics[width=5.5cm  ]{searchingBar}}
-    \hfill
-    \subfigure [Tabs]
-       { \includegraphics[width=5.5cm]{tabs}}
-    \vfill
-     \subfigure[Link]
-     { \centering \includegraphics[width=6cm]{link}}
-  
-  \caption{Filters}
-    \end{figure}
-Los elementos que nos aportan familiaridad son la iconografia que utilizamos para mostrar el AQI. Utilizamos nubes, por representacion
-del aire, el entorno, se acompana de un corazon si la calidad es buena, de un simbolo de exclamacion si es pobre, de una cruz si es 
-mala y cambiamos a una mascara de gas si el estado es insalubre.
-
-Hoy en dia todos estamos acostumbrados a los mapas de GoogleMaps, por ello se ha integrado para representar el mapa y no otro,
-ya que los usuarios estan familiarizados por como se ven y en su manejo.
 
 El simbolo de nuestra herramienta es un genio, es decir un guru, ademas, incluimos "Aire" en el logo, porque representa perfectamente
 que mostramos. Nuestra herramienta es el genio del Aire.
