--- a/contents/compelling/mission.tex
+++ b/contents/compelling/mission.tex
@@ -14,10 +14,19 @@ Una vez marcada nuestra mision, nos enfrentamos a una serie de problemas, puede 
 necesita de esta caracteristica que le proporcionamos. Tenemos un desafio doble, el ofrecerselo a los usuarios y 
 el hacerle ver que en realidad es necesario, que le ayuda en su rutina o vida diaria.
 
+Aqui entra en juego el saber aplicar las tecnicas de marketing mas apropiadas para alcanzar a nuestros usuarios.
+Tendremos que realizar un estudio de nuestro publico objetivo, que tipo de publicidad consume y por que canal. Asi,
+podremos acercanos a ellos de la forma mas adecuada. Lamentablemente, el mercado esta en un cambio continuo,
+por lo que dependiendo del momento en el que nos encontramos, deberemos adaptarnos para encontrar la formula 
+perfecta.
 
 \subsubsection{How to solve it} 
 Deberemos estudiar y analizar que carencias tiene el mercado actualmente y que necesidades tiene el usuario.
 Nos plantearemos una serie de preguntas, como pueden ser de que manera puede ayudarme tener este conocimiento.
+Definir el publico objetivo, que utiliza en su dia a dia para estar informado o como entretenimiento y buscar
+que tipo de publicidad consume para asi poder acercanos a ellos. Hay que tener en cuenta que debemos mantenernos
+fiel al espiritu de lo que representamos, por lo que ademas del publico, deberemos saber que tipo de publicidad
+se adapta mejor a nuestro producto.
 
 \subsubsection{How we solve it. Aire Guru} 
 La mision de Aire Guru es incrementar el concienciamiento de la calidad del Aire. 
