--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,15 +1,17 @@
 \newpage
 \section{Compelling}
-The human being moves by the power of seduction, only if we feel attracted we will put our interest
-and effort to achieve it. This shows us that in the representations we make, we will have to worry
-about the effect that it transmits, the connection it has for others, more attraction, more level
-of involvement on the part of the user.\\
+The human being moves by the power of seduction, only if we feel attracted will we put our
+interest and effort to achieve it. This shows us that in the representations that we make, we will have to
+worry about the effect it transmits, the hook it has for others, more attraction, more
+Level of involvement by the user. \\
 
+The marketing departments have been studying different techniques during the last years,
+so we can apply your consent to reach our users and they want to continue with us.
 
 In this section we will review the different points to implement a product that stays in mind
 of the user and this is irresistibly attracted to use it.
 \input{contents/compelling/mission.tex}
-\input{contents/compelling/advantage.tex}
+%\input{contents/compelling/advantage.tex}
 \input{contents/compelling/engagement.tex}
 \input{contents/compelling/userExperience.tex}
 \input{contents/compelling/attractive.tex}
