--- a/contents/compelling/mission.tex
+++ b/contents/compelling/mission.tex
@@ -14,10 +14,19 @@ Once our mission is marked, we face a series of problems, the user may not know 
 You need this feature that we provide. We have a double challenge, to offer it to users and
 to make him see that it is really necessary, that he helps him in his routine or daily life.
 
+Here comes into play the ability to apply the most appropriate marketing techniques to reach our users.
+We will have to conduct a study of our target audience, what type of advertising consumes and by what channel. A) Yes,
+we can approach them in the most appropriate way. Unfortunately, the market is in a continuous change,
+so depending on the moment in which we are, we must adapt to find the formula
+perfect
+
 \subsubsection{How to solve it} 
 We must study and analyze what gaps the market currently has and what needs the user has.
 We will ask ourselves a series of questions, such as how this knowledge can help me.
-
+Define the target audience, which uses in their day to day to be informed or as entertainment and search
+what type of advertising consumes so we can get closer to them. Keep in mind that we must stay
+faithful to the spirit of what we represent, so in addition to the public, we should know what kind of advertising
+It adapts better to our product.
 \subsubsection{How we solve it. Aire Guru} 
 The mission of Aire Guru is to increase the awareness of the quality of the air.
 There are several problems regarding this issue, the first one is user misinformation, since it is not
