--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -7,12 +7,20 @@ The system can display the data in a precise, optimized, fully customized way an
   
 This sequence will allow the user the possibility of investigating by itself, as if the writing of a novel was about.
 
+We look for simplicity since the objective is to represent the information, we will flee from any unnecessary decoration
+the main objective. Remember that less is more. A complicated design, with many colors and different abstract shapes
+It will be more difficult to interpret by the user.
+
 The representation must be out of all ambiguity, not show information that is deceptive or that has to be dedicated
 too much time fixing on the details to be able to interpret it correctly. When representing the information it will be
 including what is basically necessary, always fleeing from ornate graphics that only contribute noise to the represetation.
 
 We will seek to create familiarity, that the user can quickly understand the structures used and
 It is easy for you to move with the minimum possible learning time.
+
+In addition, in the market there are several standards to which the user is accustomed and knows what to expect.
+For example a magnifying glass, we relate it to the action of searching, if we use this icon, the user will quickly know that
+function performs, however, if we use a completely new one, it can even confuse the user \\
 
 It is important to give the user a degree of flexibility, that is able to make their own selections to be able to see
 the data you are interested in
@@ -86,9 +94,33 @@ select the date we want.
     
     \begin{figure}[ht]
         \centering
-        \includegraphics[width=12cm]{waitingSymbol}
+    
         \caption{Waiting symbol}
-    \end{figure}  
+    \end{figure}
+    
+    \begin{figure}[ht]
+        \centering
+       \subfigure[Searching bar]
+        {\includegraphics[width=5.5cm  ]{searchingBar}}
+        \hfill
+        \subfigure [Tabs]
+           { \includegraphics[width=5.5cm]{tabs}}
+        \vfill
+         \subfigure[Link]
+         { \includegraphics[width=6cm]{link}}
+         \hfill
+         \subfigure [Waiting symbol]
+            { \includegraphics[width=5.5cm]{waitingSymbol}}
+      
+      \caption{Standard widgets}
+        \end{figure}
+
+        The elements that give us familiarity are the iconography that we use to show the AQI. We use clouds, by representation
+             of the air, the environment, it is accompanied by a heart if the quality is good, of a symbol of exclamation if it is poor, of a cross if it is
+             bad and we change to a gas mask if the state is unhealthy.
+            
+             Today we are all used to GoogleMaps maps, so it has been integrated to represent the map and not another,
+             since users are familiar with how they look and how they are used.      
 
 
 
@@ -98,7 +130,7 @@ select the date we want.
 \begin{itemize}
     \done Has a relaxed aesthetic where graphics with information prevail
    \done The representation follows a sequence logic
-    \done Familiarity, repetition of structures and colors that represent the same
+    \done Familiarity, repetition of structures and colors that represent the same and respect standards
     \done Flexibility. The user can make multiple selections
     \crossed Waiting times should be improved
     
