first pass spanglish

--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -6,6 +6,19 @@ to be able to obtain them, understand them and use them, that is, apply them to 
 it is necessary that the user can access them in a way that is familiar and in a language and nomenclature
 he can understand.\\ 
 
+So how do we consider that data is accessible to a user?
+\begin{itemize}
+\item When it is easy to obtain.
+The data should be readily available over the web.
+\item When it is easy to understand.
+The data must be represented in such a way that it's meaning is clear and obvious to a non-specialist. 
+Imagine a science writer explaining a complicated concept for a mass market magazine audience. Use everyday language and easily interpretable diagrams.
+\item When it is easy to use.
+A user must be able to apply the data to their own particular purpose without complicated procedure.
+\end{itemize}
+
+
+
 In this section we will see if it is possible to access data by an average user and how to optimize accessibility.
 
 \input{contents/accessible/available.tex}
