--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -1,34 +1,26 @@
-\subsection{Disponibilidad}
+\subsection{Availability}
     
-As we mentioned in the introduction to this chapter, the data sets may be available in the original source, but not by
-This means that they are accessible.
-The challenges that we encounter with the raw data, direct from the source of origin, are the following: \\   
+As we mentioned in the introduction to this chapter, the data sets may be available in the original source. However, this doesn't necessarily
+mean that they are readily accessible.
+What are some of the challenges that we encounter with the raw data, direct from the source of origin? \\   
  
-\textbf{Location}. Data sets are available in organized open data portals
-and structured, you usually need a search and selection task
-sometimes complicated. Although companies put more and more of their part in offering an interface
-pleasant and functional to users, this task requires a research work by the user,
-Since possibly, you should look in different portals. \\
+\textbf{Location}. Data sets are usually available in open data portals that have been organized and structured in particular ways.
+Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need. Sometimes the data may not all be available in the one location, but may require searching through multible portals.
+\textbf{Extraction}. Data sets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user. Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
 
-\textbf{Extraction}. Data sets are usually available through a programming interface
-of applications (API) not easily interpretable by the average user. Normally has
-a document that describes each of the fields and values that are presented in the document and how to use the API. \\
+\textbf{Readability}. Data sets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
+the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
 
-\textbf{Readability}. Usually the data sets are represented in a format to be processed by
-some software, so its reading is complicated by the average user, at best,
-they will be represented in a table and even then, it will be very difficult to extract information.
+Therefore, we can not say that data interfaces are commonly accessible in a useful way for the average user. \\
 
-Therefore, we can not say that these data are accessible in a useful way for the average user. \\
+\subsubsection{How can we solve the problem?} 
 
-\subsubsection{How to solve it.} 
+We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret, and we must describe it in a way that is easy to understand and quick to digest..
 
-We must provide the information required by the user directly, easy to read and interpret. In a format
-that is easy and fast to assimilate.
-
-For the correct use of the data we will have to carry out processes such as extraction, transformation and
-data cleaning, so you get the data you need to show the useful information.
+In order to collect the information which is relevant to the user, we will need to carry out processes such as extraction, transformation and
+data cleaning.
  
-\subsubsection{How we solve it. Aire Guru.} 
+\subsubsection{How we solve it using Aire Guru.} 
 
 Our tool uses the air quality data provided by the city of Malaga in its open data portal.\footnote{\url{https://datosabiertos.malaga.eu/}}\\
 \begin{figure}[ht]
@@ -38,6 +30,10 @@ Our tool uses the air quality data provided by the city of Malaga in its open da
     \hfill
     \subfigure [Category environment]
        { \includegraphics[width=5.5cm]{openDataPortalEnviromentCategory}}
+
+
+
+
     \vfill
      \subfigure[GeoJson Document]
      { \centering \includegraphics[width=4.75cm]{geoJsonAirQualityDataRaw}}
@@ -45,25 +41,22 @@ Our tool uses the air quality data provided by the city of Malaga in its open da
   \caption{Open Data Portal Malaga}
     \end{figure}
 
-    This data portal offers an offer of categories represented by icons, so it is necessary to know in which category the set is classified
-    of data, once the category is accessed, we have a search bar that allows us to insert the keywords to search the data set
-    wanted.\\
+    This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
+    Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.\\
     
-    In this case you can click on the link and this will open the data in a new tab, so the use of a computer system
-    for downloading the data is not strictly necessary, but we can see that the format is not readable, at least from the point
-    of human sight.
+    In this case, if you click on the link, data is displayed in a new tab. The use of software
+    for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 
-AireGuru \footnote{\url{https:\\aire.guru}} offers all the necessary information on a web platform with an adapted visualization
-to human understanding.
+AireGuru \footnote{\url{https:\\aire.guru}} offers all the necessary information on a web platform which has been designed to facilitate human understanding.
 \newpage
 \elsparagraph{Evaluation}  
 
 \begin{itemize}
-    \done Location. The location of the data is direct, since it offers information from the first moment in which the web is accessed. On the main page
+    \done Location. Locating data is made simple, since information is displayed immediately on accessing the website. The main page
          presents the levels of pollution in all areas without the need to make any selection.
-    \done Extraction. No software or computer knowledge is necessary to access the information.
-    \done Readability. It contains a map where the pollution levels are presented by colors. These colors are defined by a fair legend
-         below the map. It has a glossary that explains the concepts presented on the website, the meaning of each section and how
+    \done Extraction. No specialist software or computer knowledge is necessary to access the information.
+    \done Readability. A map shows pollution levels, represented by different colors. These colors are defined by a legend
+         below the map. A glossary explains the concepts presented on the website, the meaning of each section and includes clear instructions on how to
          browse the web page.
  
 
